# back-end-facility

./: '  .gitignore  :w  CMakeLists.txt  Makefile  README.md  count.sh  daemon.c  threadpool.h
benchmark/: CMakeLists.txt  Makefile  lockfreebenchmark.cc
http/: CMakeLists.txt  HttpBuffer.cc  HttpBuffer.h  HttpClient.cc  HttpClient.h  HttpRequest.h  HttpResponse.h  HttpServer.cc  HttpServer.h  Makefile  SocketPoll.cc  SocketServer.cc  SocketServer.h  main.cc
http/unittest/: CMakeLists.txt  SocketPollTest.cc
include/: ITask.c  ITask.h  message.h  thread.h  threadpool.h  worker.h
misc/: CMakeLists.txt  LockFreeBuffer.h  LockFreeContainer.h  LockFreeList.h  Makefile  NonCopyable.h  PerThreadMemory.cc  PerThreadMemory.h  SpinLockQueue.h  SpinlockQueue.h  atomic_ops.h  functor.h  lock-free-list.h  log.h  noncopyable.h
misc/src/: LockFreeBuffer.cc  LockFreeList.cc  PerThreadMemory.cc  lock-free-list.cc
misc/unittest/: CMakeLists.txt  LockFreeBufferTest.cc  Makefile  PerThreadMemoryTest.cc  SpinlockQueueTest.cc  testFunctor.cc  unittest
net/: Makefile  SocketBuffer.h  SocketPoll.h  SocketServer.cc  SocketServer.h  newMakefile
net/example/: client.py  main.cc  run_test.sh
net_obsolete/: Makefile  SocketServer.h
slog/: .gitignore  AsynLogAppender.cc  AsynLogAppender.h  CMakeLists.txt  CacheTimeStamp.cc  CacheTimeStamp.h  FixedBuffer.h  Likely.h  LogFileAppender.cc  LogFileAppender.h  LogStream.cc  LogStream.h  Logger.cc  Logger.h  Makefile
slog/samples/benchmark/: Makefile  main.cc  run_prof.sh
slog/samples/simple/: CMakeLists.txt  Makefile  main.cc
slog/test/: CMakeLists.txt  Makefile  TestAsynLogging.cc  TestCacheTimeStamp.cc  TestLogStream.cc  TestLogger.cc  check_crash.sh  main.cc  run_test.sh
snippet/: cas2.c  cs  cs.cc  overfloat.cc  read  read_random_memory.cc
src/: listener.cc  message.cc  thread.cc  threadpool.cc  worker.cc
sys/: AtomicOps.h  CMakeLists.txt  Defs.h  FilePoll.h  Log.h  LogLayer.h  Logger.h  Makefile  SocketPoll.h  atomic_ops.h  defs.h  log.h
sys/src/: Daemon.cc  FilePoll.cc  Log.cc  LogLayer.cc  Logger.cc  SignalHandler.cc  SocketPoll.cc  log.cc
sys/unittest/: CMakeLists.txt  LoggerTest.cc  Makefile  SocketPollTest.cc
thread/: CMakeLists.txt  ITask.h  Makefile  Thread.h  ThreadPool.h  Worker.h  WorkerBodyBase.h  thread.h  threadpool.h  worker.h
thread/src/: Thread.cc  ThreadPool.cc  Worker.cc  WorkerBodyBase.cc  thread.cc  threadpool.cc  worker.cc
thread/unittest/: CMakeLists.txt  Makefile  ThreadPoolTest.cc  ThreadTest.cc  WorkerTest.cc  threadpooltest.cc  threadtest.cc  workertest.cc
unittest/: Makefile  SpinLockQueueTest.cc  SpinlockQueueTest.cc  threadpooltest.cc  threadtest.cc  unittest  workertest.cc
(+38 files in other folders)
